query-compiler/query-compiler/tests/snapshots/queries__queries@update-m2m-disconnect.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/update-m2m-disconnect.json
---
transaction
   dataMap {
       id: Int (id)
       title: String (title)
       userId: Int (userId)
   }
   let 0 = unique (query «SELECT "public"."Post"."id", "public"."Post"."title",
                          "public"."Post"."userId" FROM "public"."Post" WHERE
                          "public"."Post"."id" = $1 LIMIT $2 OFFSET $3»
                   params [const(BigInt(1)), const(BigInt(1)),
                           const(BigInt(0))])
   in let 0$id = mapField id (get 0)
      in let 1 = query «SELECT "public"."Category"."id", "t0"."B" AS
                        "CategoryToPost@Post" FROM "public"."Category" INNER
                        JOIN "public"."_CategoryToPost" AS "t0" ON "t0"."A" =
                        "public"."Category"."id" WHERE ("public"."Category"."id"
                        = $1 AND "t0"."B" IN [$2,*]) OFFSET $3»
                 params [const(BigInt(1)), var(0$id as Int), const(BigInt(0))]
         in let 0 = unique (validate (get 0)
                [ rowCountNeq 0
                ] orRaise "MISSING_RELATED_RECORD");
                0$id = mapField id (get 0);
                1$id = mapField id (get 1)
            in execute «DELETE FROM "public"."_CategoryToPost" WHERE
                        ("public"."_CategoryToPost"."B" = ($1) AND
                        "public"."_CategoryToPost"."A" IN [$2,*])»
               params [var(0$id as Int), var(1$id as Int)];
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in unique (query «SELECT "public"."Post"."id", "public"."Post"."title",
                        "public"."Post"."userId" FROM "public"."Post" WHERE
                        "public"."Post"."id" = $1 LIMIT $2 OFFSET $3»
                 params [var(0$id as Int), const(BigInt(1)), const(BigInt(0))])
