query-compiler/query-compiler/tests/snapshots/queries__queries@update-set-nested-prisma#27650.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: "query-compiler/query-compiler/tests/data/update-set-nested-prisma#27650.json"
---
transaction
   dataMap {
       id: Int (id)
       userId: Int (userId)
   }
   let 0 = unique (query «SELECT "public"."Patient"."id",
                          "public"."Patient"."userId" FROM "public"."Patient"
                          WHERE "public"."Patient"."id" = $1 LIMIT $2 OFFSET $3»
                   params [const(BigInt(1)), const(BigInt(1)),
                           const(BigInt(0))])
   in let 0$id = mapField id (get 0);
          0$userId = mapField userId (get 0)
      in let 1 = unique (query «SELECT "public"."User"."id" FROM "public"."User"
                                WHERE (1=1 AND "public"."User"."id" IN [$1,*])
                                OFFSET $2»
                         params [var(0$userId as Int), const(BigInt(0))])
         in let 1 = unique (validate (get 1)
                [ rowCountNeq 0
                ] orRaise "MISSING_RELATED_RECORD");
                1$id = mapField id (get 1)
            in let 2 = unique (query «SELECT "public"."User"."id" FROM
                                      "public"."User" WHERE (1=1 AND
                                      "public"."User"."id" IN [$1,*]) LIMIT $2
                                      OFFSET $3»
                               params [var(1$id as Int), const(BigInt(1)),
                                       const(BigInt(0))])
               in let 2$id = mapField id (get 2)
                  in let 3 = unique (query «SELECT
                                            "public"."NotificationSettings"."userId"
                                            FROM "public"."NotificationSettings"
                                            WHERE (1=1 AND
                                            "public"."NotificationSettings"."userId"
                                            IN [$1,*]) OFFSET $2»
                                     params [var(2$id as Int),
                                             const(BigInt(0))])
                     in let 3 = unique (validate (get 3)
                            [ rowCountNeq 0
                            ] orRaise "MISSING_RELATED_RECORD");
                            3$userId = mapField userId (get 3)
                        in unique (query «UPDATE "public"."NotificationSettings"
                                          SET "emailMarketing" = $1,
                                          "smsMarketing" = $2 WHERE
                                          ("public"."NotificationSettings"."userId"
                                          IN [$3,*] AND 1=1) RETURNING
                                          "public"."NotificationSettings"."userId"»
                                   params [const(Boolean(true)),
                                           const(Boolean(false)),
                                           var(3$userId as Int)]);
      let 0 = unique (validate (get 0)
          [ rowCountNeq 0
          ] orRaise "MISSING_RECORD");
          0$id = mapField id (get 0)
      in unique (query «SELECT "public"."Patient"."id",
                        "public"."Patient"."userId" FROM "public"."Patient"
                        WHERE "public"."Patient"."id" = $1 LIMIT $2 OFFSET $3»
                 params [var(0$id as Int), const(BigInt(1)), const(BigInt(0))])
